# chatango-rs

./: .gitignore  .project  Cargo.toml  README.md  account.json.example  config.json  rooms.txt
src/: flags.rs  main.rs  room.rs  utils.rs
