[package]
name = "chatango-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
html-escape = "0.2"
regex = "1"
rustls = "0.23"
tokio-rustls = "0.26"
webpki-roots = "0.26"
serde_json = "1"
ureq = { version = "2", default-features = false }
